working with iSMU

--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,15 @@ uuid = "2c578262-29f9-4985-997a-4ebef13a2a1c"
 authors = ["Paul Jensen <software@jensenlab.net> and contributors"]
 version = "0.1.0"
 
+[deps]
+GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
+Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
+
 [compat]
 julia = "1"
 
